[tool.poetry]
name = "skymarket"
version = "0.1.0"
description = ""
authors = ["alexander <FILlove@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
pillow = "^9.3.0"
djangorestframework-simplejwt = "^5.2.2"
python-dotenv = "^0.21.0"
drf-spectacular = "^0.24.2"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
